--- a/exercises/bloco_10/dia_2/exercises/package.json
+++ b/exercises/bloco_10/dia_2/exercises/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jest": "^27.0.4"
+    "jest": "^27.0.4",
+    "node-fetch": "^2.6.1"
   }
 }
