Exercicio 1, dia 3, bloco 10

--- a/exercises/bloco_10/dia_3/exercises/package.json
+++ b/exercises/bloco_10/dia_3/exercises/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "conteudo-aula",
+  "name": "dia_3",
   "version": "1.0.0",
   "description": "",
-  "main": "mock.js",
+  "main": "ex1.js",
   "scripts": {
     "test": "jest --watchAll"
   },
