--- a/exercises/bloco_25/dia_1/imc/package.json
+++ b/exercises/bloco_25/dia_1/imc/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "imc": "node index.js"
   },
   "author": "artur-alvaro",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
