--- a/exercises/bloco_26/dia_1/conteudoAula/model_example/package.json
+++ b/exercises/bloco_26/dia_1/conteudoAula/model_example/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3-rc.0"
   }
