--- a/exercises/bloco_29/dia_3/conteudo_aula/associations/package.json
+++ b/exercises/bloco_29/dia_3/conteudo_aula/associations/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
